--- a/Layouts/deaths.yaml
+++ b/Layouts/deaths.yaml
@@ -259,7 +259,7 @@ cards:
 #      Total numbers of deaths over the whole pandemic, and rates per 100,000 resident population 
     download:
       - cumDeathsByPublishDate
-      - cumDeathsByPublishDateRate
+      - cumDeathsByPublishDateRate # {{ DevOnly }}
 
     tabs:
       - heading: Nation
@@ -282,10 +282,10 @@ cards:
             type: numeric
             tooltip: Cumulative total number of new deaths of people resident in each area up to {date}
 
-          - label: Rate
-            value: cumDeathsByPublishDateRate
-            type: numeric
-            tooltip: Death rate per 100,000 resident population
+          - label: Rate # {{ DevOnly }}
+            value: cumDeathsByPublishDateRate # {{ DevOnly }}
+            type: numeric # {{ DevOnly }}
+            tooltip: Death rate per 100,000 resident population # {{ DevOnly }}
       
       - heading: Region
         tabType: table
@@ -307,10 +307,10 @@ cards:
             type: numeric
             tooltip: Cumulative total number of new deaths of people resident in each area up to {date}
 
-          - label: Rate
-            value: cumDeathsByPublishDateRate
-            type: numeric
-            tooltip: Death rate per 100,000 resident population
+          - label: Rate # {{ DevOnly }}
+            value: cumDeathsByPublishDateRate # {{ DevOnly }}
+            type: numeric # {{ DevOnly }}
+            tooltip: Death rate per 100,000 resident population # {{ DevOnly }}
      
       - heading: Upper tier LA
         tabType: table
@@ -332,10 +332,10 @@ cards:
             type: numeric
             tooltip: Cumulative total number of new deaths of people resident in each area up to {date}
 
-          - label: Rate
-            value: cumDeathsByPublishDateRate
-            type: numeric
-            tooltip: Death rate per 100,000 resident population
+          - label: Rate # {{ DevOnly }}
+            value: cumDeathsByPublishDateRate # {{ DevOnly }}
+            type: numeric # {{ DevOnly }}
+            tooltip: Death rate per 100,000 resident population # {{ DevOnly }}
   
       - heading: Lower tier LA
         tabType: table
@@ -357,10 +357,10 @@ cards:
             type: numeric
             tooltip: Cumulative total number of new deaths of people resident in each area up to {date}
 
-          - label: Rate
-            value: cumDeathsByPublishDateRate
-            type: numeric
-            tooltip: Death rate per 100,000 resident population
+          - label: Rate # {{ DevOnly }}
+            value: cumDeathsByPublishDateRate # {{ DevOnly }}
+            type: numeric # {{ DevOnly }}
+            tooltip: Death rate per 100,000 resident population # {{ DevOnly }}
 
       - heading: About # {{ DevOnly }} Markdown needs writing and then implementing similar across site
         tabType: metadata # {{ DevOnly }}
